# chainsql.cdt

./: .gitignore  .gitmodules  CMakeLists.txt  IMPORTANT.md  README.md
contract/crowdfunding/: Makefile  a.out  crowdfunding.abi  crowdfunding.cc  crowdfunding.wasm  crowdfunding.wasm.h  wasm2code  wasm2code.c
contract/hello/: Makefile  hello.abi  hello.cc  hello.wasm  hello.wasm.h
contract/kv_map/: Makefile  kv_map.abi  kv_map.cc  kv_map.wasm  kv_map.wasm.h
contract/math/: Makefile  math.abi  math.cc  math.h  math.wasm  math.wasm.h
contract/storage/: storage.cc
example/: CMakeLists.txt  main.cc
imports/: chainsql.imports.in
libraries/: CMakeLists.txt
libraries/chainsqlib/: CMakeLists.txt  chainsqllib.cc  crypto.cc  malloc.cc  simple_malloc.cc
libraries/chainsqlib/capi/: system.h
libraries/chainsqlib/capi/chainsql/: action.h  storage.h  system.h  table.h
libraries/chainsqlib/contracts/: contract.h  dispatcher.h
libraries/chainsqlib/contracts/chainsql/: action.h  array.h  contract.h  dispatcher.h  map.h  storage.h  system.h  table.h
libraries/chainsqlib/core/: check.h  name.h
libraries/chainsqlib/core/chainsql/: check.h  context.h  crypto.h  fixed_bytes.h  print.h  string.h
libraries/chainsqlib/core/chainsql/table/: table.h
libraries/libc++/: CMakeLists.txt
libraries/libc++/libcxx/include/: iostream
libraries/libc++/libcxx/src/: chainsql.cpp
libraries/libc/musl/include/bits/: alltypes.h  stddef.h  stdint.h
libraries/libc/musl/src/stdio/: printf.c
libraries/libc/musl/src/time/: time.c
libraries/meta_refl/include/bluegrass/meta/: refl.hpp
libraries/native/: CMakeLists.txt  intrinsics.cc  intrinsics.cpp
libraries/native/chainsql/: intrinsics_def.hpp
libraries/native/native/chainsql/: intrinsics_def.hpp
libraries/rt/: compiler_builtins.cpp
modules/: ChainSQLCDTMacros.cmake.in  ClangExternalProject.txt  InstallCDT.cmake  LibrariesExternalProject.txt  TestsExternalProject.txt  ToolsExternalProject.txt  chainsql.cdt-config.cmake  chainsqlWasmToolchain.cmake.in
scripts/: generate_bottle.sh  generate_tarball.sh
simulator/: CMakeLists.txt  simulator.cc
simulator/common/: check.h
simulator/vm/: action.h  actionCallback.h  chainsqlWasmVm.h
simulator/vm/impl/: action.cc  chainsqlWasmVm.cc
simulator/vm/imports/: map.h  print.h  system.h
tools/: CMakeLists.txt
tools/abidiff/: CMakeLists.txt  chainsql-abidiff.cpp.in
tools/cc/: CMakeLists.txt  chainsql-cc.cpp.in  chainsql-cpp.cpp.in
tools/include/: compiler_options.hpp.in
tools/include/chainsql/: abi.hpp  abigen.hpp  abimerge.hpp  codegen.hpp  error_emitter.hpp  gen.hpp  ppcallbacks.hpp  utils.hpp
tools/include/chainsql/whereami/: whereami.hpp
tools/include/eosio/: abigen.hpp  gen.hpp
tools/init/: CMakeLists.txt  chainsql-init.cpp
tools/ld/: CMakeLists.txt  chainsql-ld.cpp.in
tools/toolchain-tester/: README.md  tests.py
tools/toolchain-tester/examples/abigen-pass/: multi_index_example.cpp  multi_index_example.json
tools/toolchain-tester/examples/compile-fail/: hello_world.cpp  hello_world.json
tools/toolchain-tester/examples/compile-pass/: hello_world.cpp
vm/: CMakeLists.txt  action.h  actionCallback.h  chainsqlWasmVm.h
vm/impl/: action.cc  chainsqlWasmVm.cc
vm/tests/: testAction.cc
